fixed layout issue on x-ray

--- a/scss/_x-ray-clinics.css
+++ b/scss/_x-ray-clinics.css
@@ -12,6 +12,7 @@
     p {
       font-size: 20px;
       font-weight: 500;
+      color: #263242;
     }
   }
 
